# cppjson-test

./: .gitignore  CMakeLists.txt  json_pathes.hpp
json_struct/: CMakeLists.txt  main.cpp
jsons/: json.json
nlohmann/: CMakeLists.txt  main.cpp
proto/: CMakeLists.txt  Message.proto  main.cpp
schema_to_proto/: README.md  cli.js  index.js  schema.json
